--- a/portal.html
+++ b/portal.html
@@ -12,33 +12,22 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 </head>
-
-
 <style>
   
 
 
   </style>
 <body>
- 
-  <div class="containerss top-bar" >
-    <div>
-     <ion-icon  class="anco" name="mail"></ion-icon>
-    <a href="mailto:lardacaridade.vinhedo@gmail.com">lardacaridade.idosodo@gmail.com</a>
-  </div>
-  <div></div>
-  <div></div>
-    <div>
-    </div>
-    <div>
-      <ion-icon class="anco" name="logo-instagram"></ion-icon>
-      <ion-icon class="anco" name="logo-facebook"></ion-icon>
-      <ion-icon class="anco" name="logo-google"></ion-icon>
-      <ion-icon class="anco" name="logo-youtube"></ion-icon>
-      <ion-icon class="anco" name="logo-instagram"></ion-icon>
-      <a href="login.php"><ion-icon  class="anco" name="enter-outline"></ion-icon></a> 
-    </div>
-  </div>
+  <div class="top-bar" id="clesio34">
+    <ul>
+        <li><a href=""><ion-icon name="logo-facebook"></ion-icon> </a></li>
+        <li><a href="https://www.google.com/search?q=twi&rlz=1C1GCEU_pt-BRAO965AO965&oq=twi&aqs=chrome..69i57j46i131i199i433i465i512j0i131i433i512j0i433i512j0i512l2j69i61l2.2672j0j7&sourceid=chrome&ie=UTF-8"><ion-icon name="logo-twitter"></ion-icon></a></li>
+        <li><a href=""><ion-icon name="logo-instagram"></ion-icon></a></li>
+        <li><a href=""><ion-icon name="logo-google"></ion-icon></a></li>
+        <li><a href=""><ion-icon name="logo-youtube"></ion-icon></a></li>
+        <li><a href="login.php"><ion-icon name="enter-outline"></ion-icon></a></li>
+    </ul>
+</div>
 
 
 
@@ -113,15 +102,91 @@
   <h3>Clique para fazer o Download</h3>
 </div>
 
-<div class="container clesio123"> 
-    <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
-    <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Regimento</a> 
-    <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Certificação</a> 
-    <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Ata da actual Diretora</a> 
-    <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Plano de trabalho</a> 
-</div>
 
-<!-- smkmmkmksmkmkmkmkmddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddssssssssssssssssssssssssssssssssssss -->
+<style>
+  
+  </style>
+  </head>
+  <body>
+  
+  
+  <div class="container-flo">
+    <div class="dropdown" >
+    <button class="dropbtn">INSTÍTUIÇÃO</button>
+    <div class="dropdown-content" >
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+    </div>
+  </div>
+    <div class="dropdown" >
+    <button class="dropbtn">Regimento</button>
+    <div class="dropdown-content" >
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+    </div>
+  </div>
+    <div class="dropdown" >
+    <button class="dropbtn">Certificação</button>
+    <div class="dropdown-content" >
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+    </div>
+  </div>
+    <div class="dropdown" >
+    <button class="dropbtn">Plano TB</button>
+    <div class="dropdown-content" >
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+    </div>
+  </div>
+  
+  </div>
+  
+  <br>
+  
+  <div class="container-flo">
+    <div class="dropdown" >
+    <button class="dropbtn">Termo de convênio</button>
+    <div class="dropdown-content" >
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+    </div>
+  </div>
+    <div class="dropdown" >
+    <button class="dropbtn">PRESTADORES DE SERVIÇO</button>
+    <div class="dropdown-content" >
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+    </div>
+  </div>
+    <div class="dropdown" >
+    <button class="dropbtn">CAPACIDADE DA INSTITUIÇÃO</button>
+    <div class="dropdown-content" >
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+    </div>
+  </div>
+    <div class="dropdown" >
+    <button class="dropbtn">Plano TB</button>
+    <div class="dropdown-content" >
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+      <a class="link_anc" href="pdf/ata-da-atual-diretoria-2022.pdf" download> <img src="img/OIP.jfif" style="width:20%;" alt="">Instituição</a> 
+    </div>
+  </div>
+  
+  </div>
+  
+
+  
+
   <!--footer-->
 
       <!-- Footer -->
